Fixed: Unaligned Error Message when registering

--- a/public/CSS/offSession.css
+++ b/public/CSS/offSession.css
@@ -1,7 +1,11 @@
 /* For styling login, signup, and forgot password pages */
 
-.login-info {
+.login-info, .error-msg {
     text-align: center;
+}
+
+.error-msg {
+    margin-bottom: 10px;
 }
 
 .login-info p {
